--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CoroutinesDemo</string>
     <string name="click_me">Click me</string>
+    <string name="cancel">Cancel</string>
+    <string name="start">Start</string>
 </resources>
