--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="click_me">Click me</string>
     <string name="cancel">Cancel</string>
     <string name="start">Start</string>
+    <string name="job_complete">Job complete!</string>
 </resources>
