--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="cancel">Cancel</string>
     <string name="start">Start</string>
     <string name="job_complete">Job complete!</string>
+    <string name="start_again">start again</string>
 </resources>
